[gd_scene load_steps=2 format=3 uid="uid://hauo0s73rjip"]

[ext_resource type="Script" uid="uid://dmtmgtkisbair" path="res://场景/UI/世界场景UI/存档界面/WorldSaveLoadUI.gd" id="1_4hg2c"]

[node name="WorldSaveLoadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hg2c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "世界存档系统"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveSlotsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "准备存档或加载..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomSaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "保存新存档"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "关闭"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomSaveButton" to="." method="_on_bottom_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
